tests/NormalTests/paczka1/fuzzy1/13257227.err
Error in line 14: ee40VVYKzX S381 60,2
Error in line 3: moVN5yuGP S613 44,6
Error in line 18: ee40VVYKzX S631 97,1
Error in line 28: qxS6mbqNN5s A913 72,6
Error in line 34: qxS6mbqNN5s S381 77,6
